# project

./: README.md
explain_maven_to_pm/: README.md  agents.py  memory.py  orchestrator.py  primitives.py  pyproject.toml  sample_run.py
explain_maven_to_pm/docs/: agent_catalog.md  architecture_overview.md  planned_vs_investigative.md
investigative_planned_task_runner/: README.md  pyproject.toml
investigative_planned_task_runner/app/: agents.py  main.py  models.py  repository.py  schemas.py  services.py
investigative_planned_task_runner/frontend/: app.js  index.html
investigative_planned_task_runner/tests/: conftest.py  test_modes.py
