[project]
name = "investigative-planned-task-runner"
version = "0.1.0"
description = "Maven sandbox for evaluating planned vs investigative execution flows"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109",
  "sqlmodel>=0.0.14",
  "uvicorn[standard]>=0.24",
  "sse-starlette>=1.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
